Fixed resolution problem for main page on small screens

--- a/app/assets/stylesheets/max_reso_1024x768.css.scss
+++ b/app/assets/stylesheets/max_reso_1024x768.css.scss
@@ -4,14 +4,11 @@
   .HomeNotSignedIn {
     margin-top: 0px;
     margin-left: 2%;
-    img {
-      max-width: 500px;
-    }
   }
 
   .ButtonsNotSignedIn {
-    margin-top: 20%;
-    margin-left: 13%;
+    margin-top: 7%;
+    margin-left: 4%;
   }
 
 /* General CSS definitions.*/
