--- a/app/assets/stylesheets/max_reso_1440x900.css.scss
+++ b/app/assets/stylesheets/max_reso_1440x900.css.scss
@@ -10,12 +10,12 @@
 /* CSS definitions for HomeNotSignedIn page.*/
   .HomeNotSignedIn {
     margin-top: 0px;
-    margin-left: 9%;
+    margin-left: 4%;
   }
 
   .ButtonsNotSignedIn {
-    margin-top: 20%;
-    margin-left: 16%;
+    margin-top: 8%;
+    margin-left: 17%;
   }
 
 /* CSS definitions for HowItWorks page.*/
