--- a/app/assets/stylesheets/max_reso_1920x1200.css.scss
+++ b/app/assets/stylesheets/max_reso_1920x1200.css.scss
@@ -9,12 +9,12 @@
 
 /* CSS definitions for HomeNotSignedIn page.*/
   .HomeNotSignedIn {
-    margin-top: 3%;
-    margin-left: 14%;
+    margin-top: 1%;
+    margin-left: 12%;
   }
 
   .ButtonsNotSignedIn {
-    margin-top: 20%;
+    margin-top: 7%;
     margin-left: 21%;
   }
 
